# CaliFusion

./: .gitignore  README.md
Aggregator/: Cargo.toml
Aggregator/res/: aggregator.wasm
Aggregator/src/: lib.rs
ClientNode/: encryption.js  encryption.txt  package-lock.json  server.js
ClientNode/Model/: Model.py  encryption.txt  run.sh
ClientNode/diffie-helman/: aa.controller.js  crypto.utils.js  index.js  package-lock.json  package.json  verification.controller.js
ModelStore/: Cargo.toml  build.sh
ModelStore/res/: modelstore.wasm
ModelStore/src/: lib.rs
PedersenVerfier/: Cargo.toml  build.sh
PedersenVerfier/src/: lib.rs
icpcannister/: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
icpcannister/src/icpcannister_backend/: Cargo.toml  icpcannister_backend.did
icpcannister/src/icpcannister_backend/src/: lib.rs
icpcannister/src/icpcannister_frontend/: package.json
icpcannister/src/icpcannister_frontend/src/: App.js
ui/: .env  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/dashboard/: layout.tsx
ui/components/new-model-trigger/steps/: model-detail.tsx
ui/lib/sample-data/: trainer-model-data.ts
ui/src/: App.tsx
ui/src/api/dataSource/: LogicApiDataSource.ts
ui/src/components/: dashboard-wrapper.tsx
ui/src/components/kanban-board/: aggregate-params-modal.tsx  kanban-card.tsx
ui/src/components/proposal/: Actions.tsx
ui/src/lib/: types.ts  utils.ts
ui/src/pages/: landing-page.tsx
ui/src/styles/: globals.css
ui/src/utils/: env.ts  node.ts
(+7 files in other folders)
